ajustando parametros de los algoritmos

--- a/notebooks/prediccion_de_tipos_de_hurto_municipio_Neiva.ipynb
+++ b/notebooks/prediccion_de_tipos_de_hurto_municipio_Neiva.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcV+7oU0/cGvwaAqs7zBRU"
+      "authorship_tag": "ABX9TyO2JPaI60DsHgtS6LvH1cTc"
     },
     "kernelspec": {
       "name": "python3",
@@ -4490,10 +4490,10 @@
         "def comparar_algoritmos(X_train, X_test, y_train, y_test):\n",
         "    # Definir una lista de algoritmos de clasificación\n",
         "    algoritmos = [\n",
-        "        ('Random Forest', RandomForestClassifier()),\n",
-        "        ('SVM', SVC()),\n",
-        "        ('KNeighbors', KNeighborsClassifier()),\n",
-        "        ('Logistic Regression', LogisticRegression()),\n",
+        "        ('Random Forest', RandomForestClassifier(n_estimators=10000, max_depth=40, min_samples_split=20, min_samples_leaf=8)),\n",
+        "        ('SVM', SVC(C=10, kernel='linear', gamma='scale')),\n",
+        "        ('KNeighbors', KNeighborsClassifier(n_neighbors=3, weights='uniform', algorithm='auto')),\n",
+        "        ('Logistic Regression', LogisticRegression(C=1.0, penalty='l2', solver='lbfgs')),\n",
         "        ('Decision Tree', DecisionTreeClassifier())\n",
         "    ]\n",
         "\n",
@@ -4528,43 +4528,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J_wJyBgYKyBP",
-        "outputId": "08f447e9-9a60-431d-8575-0796e103d25a"
+        "outputId": "7a89b584-9cfa-4b5c-95b2-ee1a4d62954d"
       },
-      "execution_count": 62,
+      "execution_count": 75,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Algoritmo: Random Forest\n",
-            "Accuracy: 0.5026269702276708\n",
-            "Precision: 0.457891865087483\n",
-            "Recall: 0.5026269702276708\n",
-            "F1 Score: 0.47333937826236744\n",
+            "Accuracy: 0.580607476635514\n",
+            "Precision: 0.42415446442933774\n",
+            "Recall: 0.580607476635514\n",
+            "F1 Score: 0.44971064506440256\n",
             "---------------------------\n",
             "Algoritmo: SVM\n",
-            "Accuracy: 0.5814360770577933\n",
-            "Precision: 0.3380679117043562\n",
-            "Recall: 0.5814360770577933\n",
-            "F1 Score: 0.4275454653005258\n",
+            "Accuracy: 0.5829439252336449\n",
+            "Precision: 0.3398236199668094\n",
+            "Recall: 0.5829439252336449\n",
+            "F1 Score: 0.42935648515363656\n",
             "---------------------------\n",
             "Algoritmo: KNeighbors\n",
-            "Accuracy: 0.5341506129597198\n",
-            "Precision: 0.43664797954689194\n",
-            "Recall: 0.5341506129597198\n",
-            "F1 Score: 0.4653927351803968\n",
+            "Accuracy: 0.5327102803738317\n",
+            "Precision: 0.45496454454115237\n",
+            "Recall: 0.5327102803738317\n",
+            "F1 Score: 0.48177205525271166\n",
             "---------------------------\n",
             "Algoritmo: Logistic Regression\n",
-            "Accuracy: 0.5814360770577933\n",
-            "Precision: 0.3380679117043562\n",
-            "Recall: 0.5814360770577933\n",
-            "F1 Score: 0.4275454653005258\n",
+            "Accuracy: 0.5829439252336449\n",
+            "Precision: 0.3398236199668094\n",
+            "Recall: 0.5829439252336449\n",
+            "F1 Score: 0.42935648515363656\n",
             "---------------------------\n",
             "Algoritmo: Decision Tree\n",
-            "Accuracy: 0.4115586690017513\n",
-            "Precision: 0.4251077745145355\n",
-            "Recall: 0.41155866900175136\n",
-            "F1 Score: 0.41763315225775355\n",
+            "Accuracy: 0.45210280373831774\n",
+            "Precision: 0.4609525818122185\n",
+            "Recall: 0.45210280373831774\n",
+            "F1 Score: 0.45579039536155036\n",
             "---------------------------\n"
           ]
         },
@@ -4572,8 +4582,6 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n",
             "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
             "  _warn_prf(average, modifier, msg_start, len(result))\n"
           ]
